Z-index correction
-

--- a/style1.css
+++ b/style1.css
@@ -100,7 +100,9 @@ p {
 	text-align: center;
 }
 nav {
-	margin: 10px 0;
+	margin: 5px 0;
+  position: relative;
+  z-index: 1;
 	background-color: #4CAF50;
 }
 nav ul {
